<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MenuActivity" android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bomb_icon" />
    <TextView
            android:text="@string/chrl_clicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:textSize="35sp"
            android:textColor="@color/colorAccent" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="serif" android:textAlignment="center"/>

    <Button
        android:id="@+id/newGameButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/new_game"
        android:textColorLink="#FD0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:text="Continue"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/continueButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.501" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/newGameButton" android:visibility="invisible"/>
    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/ranking"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/rankingButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newGameButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/options"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/optionsButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rankingButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/exit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/exitButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/optionsButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>